# launcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.en.md  README.md  RELEASE.md  RELEASE_NOTES_1.1.0.md  TAURI_COMMANDS.md  c.sh  mcp.json
.claude/: settings.local.json
.claude/commands/: release.md
.github/workflows/: release-portable.yml  release.yml
.serena/: project.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
docs/: PLUGINS.md  THUNDERSTORE.md
friends-debug/: .gitignore  Cargo.toml  nodejs-debug-negotiate.txt  nodejs-debug-output.txt  nodejs-detailed-debug.txt  nodejs-detailed-logs.txt  nodejs-negotiate-test.txt  nodejs-output-attempt3.txt  nodejs-output-new.txt  nodejs-output.txt  package-lock.json  package.json  resonite-friends.js  run-nodejs-test.bat  rust-ack-test.txt  rust-auth-websocket.txt  rust-buffered-test.txt  rust-completion-test.txt  rust-final-complete-test.txt  rust-final-test.txt  rust-initstatus-monitor.txt  rust-invocation-id-fix.txt  rust-invocationid-test.txt  rust-large-message-test.txt  rust-messagebuffer-test.txt  rust-negotiation-test.txt  rust-nodejs-exact-test.txt  rust-output-attempt2.txt  rust-output-attempt3.txt  rust-output-final.txt  rust-output-fixed.txt  rust-ping-test.txt  rust-proper-ack-test.txt  test-nodejs-debug.js  test-nodejs.js
friends-debug/src/: main.rs
gui/: Cargo.toml  README.md  index.html  log.txt  logviewer.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/.claude/: settings.local.json
gui/fonts/: README.md
gui/src/: App.css  App.tsx  i18n.ts  index.css  logviewer-main.tsx  main.rs  main.tsx
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: friends.rs  logviewer.rs  main.rs  wsrelay.rs
gui/src/components/: BulkUpgradeModal.tsx  CustomTitlebar.tsx  FirstRunSetupModal.tsx  FriendsTab.tsx  GameInstallModal.tsx  GameUpdateModal.tsx  GameVersionSelector.tsx  HomeTab.tsx  InstallationTab.tsx  LaunchArgumentsEditor.tsx  LaunchTab.tsx  LogViewerApp.tsx  ModRiskWarningModal.tsx  ModVersionSelector.tsx  MultiFileInstallModal.tsx  PluginsTab.tsx  ProfileActionsDropdown.tsx  ProfileDeleteConfirmModal.tsx  ProfileEditModal.tsx  ProfileEditPage.tsx  ProfilesTab.tsx  SettingsTab.tsx  UpgradeableModsDebug.tsx  WebSocketRelayPlugin.tsx
gui/src/hooks/: useGameInstallation.ts  useQueries.ts
gui/src/locales/: en.json  ja.json
gui/src/store/: useAppStore.ts
gui/src/types/: steam-news.ts
lib/: Cargo.toml
lib/src/: bepis_loader.rs  depotdownloader.rs  install.rs  lib.rs  mod_loader.rs  mod_loader_type.rs  mod_manager.rs  monkey_loader.rs  profile.rs  steamcmd.rs  test_utils.rs  thunderstore.rs  utils.rs
lib/tests/: integration_test.rs
server/: package-lock.json  package.json
server/src/: handlers.ts  index.ts  tunnel.ts  types.ts
server/test/: test-client.js  ws-client.js
tauri-gui/src/: App.css  App.tsx
tauri-gui/src-tauri/: tauri.conf.json
tauri-gui/src/components/: InstallationTab.tsx  LaunchTab.tsx  ProfilesTab.tsx
