[package]
name = "reso-launcher-cli"
version = "1.5.5"
edition = "2021"
authors = ["resonite.love community"]
description = "RESO Launcher CLI - Community Resonite management CLI"
license = "MIT"

[dependencies]
clap = "2.33"  # コマンドライン引数のパース
regex = "1.5"  # 正規表現
reso-launcher-lib = { path = "../lib" }  # 内部ライブラリ
