[package]
name = "resonite-tools-lib"
version = "0.0.4"
edition = "2021"
authors = ["kokoa-love"]
description = "Kokoa Resonite Tools - Core library for Resonite management"

[dependencies]
regex = "1.5"  # 正規表現
serde = { version = "1.0", features = ["derive"] }  # JSONシリアライズ/デシリアライズ
serde_json = "1.0"  # JSON処理
chrono = { version = "0.4", features = ["serde"] }  # 日時処理
reqwest = { version = "0.11", features = ["json"] }  # HTTP リクエスト
anyhow = "1.0"  # エラーハンドリング
tokio = { version = "1.0", features = ["full"] }  # 非同期ランタイム
sha2 = "0.10"  # SHA256ハッシュ計算
