[package]
name = "resonite-tools-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Tauri GUI application for Resonite Tools"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "window-unmaximize", "window-start-dragging", "window-show", "window-maximize", "window-hide", "window-close", "window-unminimize", "window-minimize", "fs-read-file", "fs-copy-file", "shell-open", "fs-create-dir", "dialog-ask", "dialog-message", "dialog-open", "fs-write-file", "fs-remove-file", "fs-read-dir", "fs-exists", "dialog-save", "fs-remove-dir", "notification-all", "dialog-confirm", "fs-rename-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
resonite-tools-lib = { path = "../../lib" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
