[package]
name = "reso-launcher"
version = "1.6.0"
edition = "2021"
authors = ["resonite.love community"]
description = "RESO Launcher - Community Resonite management tool"
license = "MIT"

[[bin]]
name = "reso-launcher"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "system-tray", "window-start-dragging", "window-show", "window-hide", "window-close", "window-unminimize", "window-minimize", "fs-read-file", "fs-copy-file", "shell-open", "fs-create-dir", "dialog-ask", "dialog-message", "dialog-open", "fs-write-file", "fs-remove-file", "fs-read-dir", "fs-exists", "dialog-save", "fs-remove-dir", "notification-all", "dialog-confirm", "fs-rename-file", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
reso-launcher-lib = { path = "../../lib" }
zip = "0.6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
